# fastapi-base

./: README.md  app.py  pyproject.toml
alembic/: env.py
alembic/versions/: e76f94dd6ecf_initial_migration.py
commands/: delete_reports.py
src/config/: configuration.py
src/controllers/: auth_controller.py  report_controller.py
src/db/: database.py
src/models/: __init__.py  report.py  user.py
src/routes/: auth_router.py  report_router.py
src/schemas/: ReportSchema.py  UserSchema.py  __init__.py
src/utils/: auth.py
